@startuml
package br.univille.projetofabsoftfinancas.entity {
    class Receita {
        - Long id
        - String descricao
        - float valor
        - LocalDate data
        - String tipo
        --
        + Conta conta
        + Cartao cartao
    }

    class Despesa {
        - Long id
        - String descricao
        - float valor
        - LocalDate data
        - String tipo
        --
        + Conta conta
        + Cartao cartao
    }

    class Conta {
        - Long id
        - String numero
        - String agencia
        - String banco
    }

    class Cartao {
        - Long id
        - String numero
        - String cvv
        - String validade
        - String nomeCliente
        - String banco
        - String bandeira
        --
        + Conta conta
    }

    class Investimento {
        - Long id
        - String descricao
        - float valor
        - String prazo
        --
        + Conta conta
    }

    class AlertaPagamento {
        - Long id
        - String descricao
        - LocalDate dataVencimento
        - boolean status
        --
        + Conta conta
        + Cartao cartao
    }

    class Objetivo {
        - Long id
        - String descricao
        - float valorAlvo
        - float progressoAtual
        --
        + Receita receita
        + Investimento investimento
    }

    class LimiteGastos {
        - Long id
        - float valorLimite
        --
        + Despesa despesa
    }

    Receita "*" --> "1" Conta 
    Receita "*" --> "1" Cartao 
    Despesa "*" --> "1" Conta 
    Despesa "*" --> "1" Cartao 
    Cartao "*" --> "1" Conta 
    Investimento "*" --> "1" Conta 
    AlertaPagamento "*" --> "1" Conta 
    AlertaPagamento "*" --> "1" Cartao 
    Objetivo "*" --> "*" Receita 
    Objetivo "*" --> "*" Investimento 
    LimiteGastos "*" --> "1" Despesa
@enduml